Version 5.90.0.9
Allow hash table chaperones and impersonators to Support efficient
 hash-clear and hash-clear!
setup/collection-name: added
syntax/unsafe/for-transform: added

Version 5.90.0.6
Added path<?, symbol<?
Added hash-copy-clear

Version 5.90.0.4
Add current-library-collection-links, find-library-collection-links
Changed module search to use current-library-collection-paths
 before collection link files by default
Changed use-user-specific-search-paths and use-collection-link-paths
 to affect only find-library-collection-paths and
 find-library-collection-links
Removed restriction against handle-evt? arguments to wrap-evt,
 handle-evt. and chaperone-evt

Version 5.90.0.3
Base user directoy paths on an installation name instead
 of the Racket version string
Remove "shared" links and package scope
raco pkg install: --link is default for directory source; added
 --copy

Version 5.90.0.2
Added #%declare
Cross-phase persistent modules must be declared with
 (#%declare #:cross-phase-persistent)
Added hash-clear, hash-clear!, and hash-empty?

Version 5.90.0.1
Added "share" directory, moved "pkgs" there; moved "collects"
 back out of "lib"
setup/dirs: added find-share-dir, find-user-share-dir
ffi/unsafe: added array-type and in-array

Version 5.3.900.7
Changed equal? to work on module path index values
Added 'fs-change mode to system-type

Version 5.3.900.6
Added identifier-binding-symbol
Changed ".plt" file unpacking to require certain literal S-expression
 patterns, instead of evaluating S-expressions from the archive
racket/file: make-directory* never fails on existing directories

Version 5.3.900.5
Added call-with-default-reading-parameterization
racket/file: added call-with-atomic-output-file
pkg/path: added, re-exported by pkg/lib
setup/path-to-relative: added <pkg> results
racket/runtime-path: special handling for paths that
 correspond to collection-file-path results, instead of
 paths that are relative to the main "collects"