@@ -199,7 +199,7 @@ RACKET = racket/bin/racket $(USER_CONFIG)
 RACO = racket/bin/racket $(USER_CONFIG) -N raco -l- raco
 WIN32_RACKET = racket\racket $(USER_CONFIG)
 WIN32_RACO = racket\racket $(USER_CONFIG) -N raco -l- raco
-X_AUTO_OPTIONS = --skip-installed --deps search-auto $(JOB_OPTIONS)
+X_AUTO_OPTIONS = --skip-installed --deps search-auto --pkgs $(JOB_OPTIONS)
 USER_AUTO_OPTIONS = --scope user $(X_AUTO_OPTIONS)
 LOCAL_USER_AUTO = --catalog build/local/catalog $(USER_AUTO_OPTIONS)
 SOURCE_USER_AUTO_q = --catalog "$(SRC_CATALOG)" $(USER_AUTO_OPTIONS)
